--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Dynamic Personal Website",
     "version": "1.0.0",
-    "description": "This app is dynamic personel website project which has CMS.",
+    "description": "This project is personel website which has CMS.",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
