--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "git+https://github.com/ahmetbcakici/DynamicPersonalWebsite"
     },
     "author": "Ahmet Buğra Çakıcı",
-    "license": "MIT",
+    "license": "CC",
     "bugs": {
         "url": "https://github.com/ahmetbcakici/DynamicPersonalWebsite/issues"
     },
