--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "homepage": "https://github.com/ahmetbcakici/DynamicPersonalWebsite#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "ejs": "^2.7.4",
         "express": "^4.17.1",
